# QuantitativeTrading

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  LICENSE  Procfile  README.md  docker-compose.debug.yml  docker-compose.yml  makefile  manage.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: django.yml
core/: admin.py  error_views.py  forms.py  graph.py  graph_di.py  models.py  urls.py  views.py
core/finance/: Untitled-1.ipynb  account.py  direct_treasure.py  download_market_data.py  ibov.py
core/management/commands/: load.py  load_finance_data.py
core/migrations/: 0001_initial.py  0002_rename_fiibr_fii_alter_fii_table.py
core/static/core/css/: main.scss
core/static/core/css/abstracts/: _functions.scss  _mixins.scss  _variables.scss
core/static/core/css/base/: _base.scss  _reset.scss
core/static/core/css/components/: _card.scss  _graph.scss  _table.scss  _widget.scss  widget.scss
core/static/core/css/layout/: _l-header.scss  _l-main.scss  _l-nav.scss  _l-sidebar.scss  l-nav.scss
core/static/core/css/pages/: _home.scss  _page_http_error.scss
core/static/core/js/: main.js
core/templates/core/home/: di.html  index.html  profile.html  treasure.html
core/templates/core/http_error/: 400.html  403.html  404.html  500.html
core/templates/core/includes/: cards.html  form_portfolio.html  navbar.html  sidebar.html  stock-heatmap.html  table.html  widget.html  widget_tradingView.html
core/templates/core/layouts/: base.html
core/templates/core/profile/: portifolio_user_form.html
core/templates/registration/: login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  signup.html
core/tests/: test_account.py  test_staticfile.py  test_urls.py
documents/: links.md
finance/: admin.py  apps.py  models.py  urls.py  views.py
finance/account/: account.py  stock.py  stockPortfolio.py
finance/management/commands/: save.py
finance/research/: bc_sgs.py  di.py  direct_treasure.py  download_market_data.py  etf.py  fii.py  ibov.py  index_b3.py  sgs.py  stock.py  tools.py
finance/templates/: update.html
finance/tests/: test_account.py  test_di.py  test_index_b3.py  test_stock_portfolio.py  test_stock_portfolio_errors.py
quantitativeTrading/: settings.py  urls.py  wsgi.py
quantitativeTrading/core/: admin.py  models.py  views.py
quantitativeTrading/core/finance/: direct_treasure.py  download_market_data.py  ibov.py
quantitativeTrading/core/static/core/css/: main.scss
quantitativeTrading/core/static/core/css/abstracts/: _variables.scss
quantitativeTrading/core/static/core/css/components/: _card.scss
quantitativeTrading/core/static/core/css/layout/: _l-main.scss  _l-sidebar.scss
quantitativeTrading/core/static/core/css/pages/: _home.scss
quantitativeTrading/core/templates/core/: index.html
quantitativeTrading/core/templates/core/home/: index.html  main.html
quantitativeTrading/core/templates/core/includes/: cards.html  navbar.html  sidebar.html
quantitativeTrading/core/templates/core/layouts/: base.html
quantitativeTrading/quantitativeTrading/: asgi.py  settings.py  urls.py  wsgi.py
