[tool.poetry]
name = "quantitativetrading"
version = "0.1.0"
description = "Quantitative trading Implement a portfolio management system and create investment models"
authors = ["Weslei Silva Bomfim <www.weslei@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.3"
yfinance = "^0.1.70"
pandas = "^1.4.1"
django-compressor = "^3.1"
libsass = "^0.21.0"
fontawesomefree = "^6.0.0"
django-admin-rangefilter = "^0.8.4"
investpy = "^1.0.8"
gunicorn = "^20.1.0"
django-heroku = "^0.3.1"
django-debug-toolbar = "^3.2.4"
django-extensions = "^3.1.5"
html5lib = "^1.1"
bs4 = "^0.0.1"
python-decouple = "^3.6"
psycopg2-binary = "^2.9.3"
SQLAlchemy = "^1.4.32"
openpyxl = "^3.0.9"
crispy-bootstrap5 = "^0.6"
whitenoise = "^6.1.0"

[tool.poetry.dev-dependencies]
black = {extras = ["jupyter"], version = "^22.3.0"}
djlint = "^0.7.5"
django-debug-toolbar = "^3.2.4"
django-extensions = "^3.1.5"
ipython = "^8.1.1"
ipykernel = "^6.9.2"
pip = "^22.0.4"
install = "^1.3.5"
Werkzeug = "^2.0.3"
ptpython = "^3.0.20"
notebook = "^6.4.10"
jupyter-contrib-nbextensions = "^0.5.1"
python-language-server = "^0.36.2"
jupyterthemes = "^0.20.0"
autopep8 = "^1.6.0"
pylint = "^2.13.7"
isort = "^5.10.1"
yapf = "^0.32.0"
pytest = "^7.1.2"
pytest-django = "^4.5.2"
pywin32 = "^304"
pyOpenSSL = "^22.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
